compiler-core/src/parse/snapshots/gleam_core__parse__tests__type_invalid_type_name.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\ntype A(a, type) {\n    A\n}\n"
---
error: Syntax error
  ┌─ /src/parse/error.gleam:2:11
  │
2 │ type A(a, type) {
  │           ^^^^ I was not expecting this

Expected one of: 
")"
a name
